make all keys visible and fix notes

--- a/src/Components/Key.module.css
+++ b/src/Components/Key.module.css
@@ -8,6 +8,7 @@ button {
   z-index: 2;
   width: 80px;
   height: 70%;
+  color: var(--white-color);
 }
 
 .major {
